--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <h1>Location</h1>
 
-<p> <a href="http://www.panjichang.com/app-release_121.apk">APK下载</a>   |   <a href="https://github.com/panjichang/location.github.io/blob/master/FAQ/zh/FAQ.md">常见问题&amp;使用技巧</a>   |   <a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=f1df0238baacff3e26ae71501efee9715105698fa2a2aec5baed43abdba82310">Location 交流群</a></p>
+<p> <a href="http://www.panjichang.com">APK下载</a>   |   <a href="https://github.com/panjichang/location.github.io/blob/master/FAQ/zh/FAQ.md">常见问题&amp;使用技巧</a>   |   <a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=f1df0238baacff3e26ae71501efee9715105698fa2a2aec5baed43abdba82310">Location 交流群</a></p>
 
 <h2>简介</h2>
 
