--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <h1>Location</h1>
 
-<p> <a href="http://www.panjichang.com">APK下载</a>   |   <a href="https://github.com/panjichang/location.github.io/blob/master/FAQ/zh/FAQ.md">常见问题&amp;使用技巧</a>   |   <a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=f1df0238baacff3e26ae71501efee9715105698fa2a2aec5baed43abdba82310">Location 交流群</a></p>
+<p> <a href="http://www.panjichang.com">APK下载</a>   |   <a href="https://github.com/panjichang/Location/blob/master/FAQ/zh/FAQ.md">常见问题&amp;使用技巧</a>   |   <a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=f1df0238baacff3e26ae71501efee9715105698fa2a2aec5baed43abdba82310">Location 交流群</a></p>
 
 <h2>简介</h2>
 
@@ -26,7 +26,7 @@
 
 <p>• 支持保存当前位置，便于快速返回</p>
 
-<p><strong>注：</strong> ROOT模式下的功能不保证适用于所有机型，发现问题可以通过<a href="https://github.com/panjichang/location.github.io/issues">Issues</a>或<a href="mailto:pan921103@qq.com">邮件</a>反馈给我</p>
+<p><strong>注：</strong> 不保证适用于所有机型，发现问题可以通过<a href="https://github.com/panjichang/Location/issues">Issues</a>或<a href="mailto:pan921103@qq.com">邮件</a>反馈给我</p>
 
 <h2>免责声明</h2>
 
